--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login and Signup</title>
+  <title>회원가입</title>
   <style>
     body {
       margin: 0;
@@ -17,7 +17,7 @@
       background-color: #f4f4f9;
     }
 
-    .login-container {
+    .signup-container {
       background: white;
       padding: 2rem;
       border-radius: 8px;
@@ -27,24 +27,23 @@
       text-align: center;
     }
 
-    .login-container h2 {
+    .signup-container h2 {
       margin-bottom: 1.5rem;
       font-size: 1.5rem;
       color: #333;
     }
 
-    .login-container input {
+    .signup-container input {
       width: 100%;
-      padding: 0.75rem;
       margin: 0.5rem 0;
+      padding: 0.75rem;
       border: 1px solid #ddd;
       border-radius: 4px;
       font-size: 1rem;
       box-sizing: border-box;
     }
 
-    .login-container button {
-      width: 100%;
+    .signup-container button {
       padding: 0.75rem;
       margin: 1rem 0;
       background: #4CAF50;
@@ -53,61 +52,52 @@
       border-radius: 4px;
       font-size: 1rem;
       cursor: pointer;
-    }
-
-    .login-container button:hover {
-      background: #45a049;
-    }
-
-    .signup-link {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-    }
-
-    .signup-link a {
-      color: #007BFF;
-      text-decoration: none;
-    }
-
-    .signup-link a:hover {
-      text-decoration: underline;
+      width: 100%;
     }
   </style>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const form = document.querySelector('form');
+      const usernameInput = document.getElementById('id');
+      const passwordInput = document.querySelector('input[name="password"]');
 
       form.addEventListener('submit', function (e) {
+        const username = usernameInput.value.trim();
+        const password = passwordInput.value.trim();
+
+        if (username === '' || password === '') {
+          e.preventDefault();
+          alert('아이디와 비밀번호를 모두 입력해주세요.');
+          return;
+        }
+
         e.preventDefault();
         const formData = new FormData(form);
 
-        fetch('/login/signin', {
+        fetch('/login/signup', {
           method: 'POST',
           body: formData,
         }).then(response => {
-          if (response.status === 200) {
-            window.location.href = '/postboard.html';
+          if (response.status === 201) {
+            window.location.href = '/';
           } else {
-            alert('로그인에 실패했습니다. 다시 시도해주세요.');
+            alert('회원가입에 실패했습니다. 다시 시도해주세요.');
           }
         }).catch(() => {
           alert('서버 오류가 발생했습니다. 잠시 후 다시 시도해주세요.');
-        })
-      })
-    })
+        });
+      });
+    });
   </script>
 </head>
 <body>
-<div class="login-container">
-  <h2>로그인</h2>
+<div class="signup-container">
+  <h2>회원가입</h2>
   <form>
-    <input type="text" name="username" placeholder="아이디" required>
-    <input type="password" name="password" placeholder="비밀번호" required>
-    <button type="submit">로그인</button>
+    <input type="text" id="id" name="username" placeholder="아이디 입력" required>
+    <input type="password" name="password" placeholder="비밀번호 입력" required>
+    <button type="submit" id="signup-button">회원가입 완료</button>
   </form>
-  <div class="signup-link">
-    <p>계정이 없으신가요? <a href="signup.html">회원가입</a></p>
-  </div>
 </div>
 </body>
 </html>
