refactor: html 코드 분리

--- a/src/main/resources/static/post.html
+++ b/src/main/resources/static/post.html
@@ -4,98 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판 글쓰기</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f4f4f9;
-        }
-
-        .new-post {
-            width: 90%;
-            max-width: 800px;
-            background: white;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-        }
-
-        .new-post textarea {
-            width: 100%;
-            margin: 0.5rem 0;
-            padding: 0.75rem;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 1rem;
-            box-sizing: border-box;
-        }
-
-        .new-post button {
-            padding: 0.75rem;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 1rem;
-            cursor: pointer;
-            margin-top: 1rem;
-        }
-    </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const cookies = document.cookie.split('; ').reduce((acc, cookie) => {
-                const [key, value] = cookie.split('=');
-                acc[key] = value;
-                return acc;
-            }, {});
-
-            const username = cookies['username'] || '알 수 없음'; // 쿠키에 username 없으면 기본값
-
-            // div에 username 표시
-            const usernameDiv = document.querySelector('#new-post-form > div');
-            usernameDiv.textContent = `작성자: ${username}`;
-
-            // 폼 제출 이벤트 처리
-            const form = document.getElementById('new-post-form');
-            form.addEventListener('submit', function (e) {
-                e.preventDefault(); // 기본 폼 동작 막기
-
-                const content = document.getElementById('content').value.trim();
-
-                if (!content) {
-                    alert('내용을 입력해주세요.');
-                    return;
-                }
-
-                fetch('/post', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        userName: username,
-                        content: content
-                    }),
-                }).then(response => {
-                    if (response.status === 201) {
-                        window.location.href = '/postboard.html'; // 성공 시 게시판으로 이동
-                    } else {
-                        alert('게시글 작성에 실패했습니다.');
-                    }
-                }).catch(error => {
-                    console.error('Error:', error);
-                    alert('서버 오류가 발생했습니다.');
-                });
-            });
-        });
-    </script>
+    <link rel="stylesheet" href="/css/post.css">
+    <script src="/js/post.js" defer></script>
 </head>
 <body>
 <form id="new-post-form" class="new-post">
