--- a/src/main/resources/static/postboard.html
+++ b/src/main/resources/static/postboard.html
@@ -4,181 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f4f4f9;
-        }
-
-        .board-container {
-            width: 90%;
-            max-width: 800px;
-            background: white;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .board-container h2 {
-            margin-bottom: 1rem;
-            font-size: 1.8rem;
-            color: #333;
-            text-align: center;
-        }
-
-        .post {
-            border-bottom: 1px solid #ddd;
-            padding: 1rem 0;
-        }
-
-        .post:last-child {
-            border-bottom: none;
-        }
-
-        .post .user {
-            font-weight: bold;
-            color: #4CAF50;
-            margin-bottom: 0.5rem;
-        }
-
-        .post .content {
-            font-size: 1rem;
-            color: #555;
-            margin-bottom: 0.5rem;
-        }
-
-        .post .actions {
-            display: flex;
-            gap: 0.5rem;
-        }
-
-        .actions button {
-            background: none;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            padding: 0.25rem 0.5rem;
-            font-size: 0.9rem;
-            cursor: pointer;
-            color: #555;
-        }
-
-        .actions button:hover {
-            background: #f0f0f0;
-        }
-
-        .write-button {
-            display: block;
-            margin: 1.5rem auto 0;
-            padding: 0.75rem 1.5rem;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 1rem;
-            cursor: pointer;
-            text-align: center;
-        }
-
-        .write-button:hover {
-            background: #45a049;
-        }
-    </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const postListContainer = document.getElementById('post-list');
-
-            const cookies = document.cookie.split('; ').reduce((acc, cookie) => {
-                const [key, value] = cookie.split('=');
-                acc[key] = value;
-                return acc;
-            }, {});
-            const userName = cookies['username'] || '알 수 없음';
-
-            fetch('/post')
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('게시글을 가져오는 데 실패했습니다.');
-                    }
-                    return response.json();
-                })
-                .then(posts => {
-                    posts.forEach(post => {
-                        const postElement = document.createElement('div');
-                        postElement.className = 'post';
-                        postElement.innerHTML = `
-                            <div class="user">${post.userName}</div>
-                            <div class="content">${post.content}</div>
-                            <div class="actions">
-                                <button class="edit-button">수정</button>
-                                <button class="delete-button">삭제</button>
-                            </div>
-                        `;
-
-                        postElement.querySelector('.delete-button').addEventListener('click', function () {
-                            if (confirm('이 게시글을 삭제하시겠습니까?')) {
-                                fetch(`/post/${post.id}`, {
-                                    method: 'DELETE',
-                                    body: JSON.stringify({ userName: userName }),
-                                }).then(response => {
-                                    if (response.ok) {
-                                        alert('게시글이 삭제되었습니다.');
-                                        postElement.remove(); // 게시글 삭제
-                                    } else {
-                                        alert('게시글 삭제에 실패했습니다.');
-                                    }
-                                }).catch(error => {
-                                    console.error('Error:', error);
-                                });
-                            }
-                        });
-
-                        // 수정 버튼 동작
-                        postElement.querySelector('.edit-button').addEventListener('click', function () {
-                            const newContent = prompt('새로운 내용을 입력하세요:', post.content);
-                            if (newContent !== null) {
-                                fetch(`/post/${post.id}`, {
-                                    method: 'PUT',
-                                    headers: {
-                                        'Content-Type': 'application/json',
-                                    },
-                                    body: JSON.stringify({
-                                        content: newContent,
-                                        userName: userName
-                                    }),
-                                })
-                                    .then(response => {
-                                        if (response.ok) {
-                                            alert('게시글이 수정되었습니다.');
-                                            postElement.querySelector('.content').textContent = newContent;
-                                        } else {
-                                            alert('게시글 수정에 실패했습니다.');
-                                        }
-                                    })
-                                    .catch(error => {
-                                        console.error('Error:', error);
-                                    });
-                            }
-                        });
-                        postListContainer.appendChild(postElement);
-                    });
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('게시글을 불러오는 중 문제가 발생했습니다.');
-                });
-
-            const writeButton = document.getElementById('write-button');
-            writeButton.addEventListener('click', function () {
-                window.location.href = '/post.html';
-            });
-        });
-    </script>
+    <link rel="stylesheet" href="/css/postboard.css">
+    <script src="/js/postboard.js" defer></script>
 </head>
 <body>
 <div class="board-container">
