--- a/src/main/resources/static/video.html
+++ b/src/main/resources/static/video.html
@@ -19,6 +19,6 @@
     </div>
 
     <!-- Script -->
-    <script src="script.js"></script>
+    <script src="js/video.js"></script>
 </body>
 </html>
